--- a/app/views/admin/galleries/new.html.erb
+++ b/app/views/admin/galleries/new.html.erb
@@ -51,9 +51,9 @@
                 <div class="breadcrumb-line">
                     <ul class="breadcrumb">
                         <li><%= link_to "<i class='icon-home2 position-left'></i> Home".html_safe, {controller: "main", action: "index"} %></li>
-                        <li><%= link_to "Gallery Manegement", admin_galleries_path %></li>
-                        <li><%= link_to "Gallery Listing", admin_galleries_path %></li>
-                        <li class="active">New Gallery</li>
+                        <li><%= link_to "Blogs Manegement", admin_galleries_path %></li>
+                        <li><%= link_to "Blog Listing", admin_galleries_path %></li>
+                        <li class="active">New Blog</li>
                     </ul>
                 </div>
             </div>
