--- a/app/views/admin/main/_main_menu.html.erb
+++ b/app/views/admin/main/_main_menu.html.erb
@@ -8,9 +8,9 @@
     </ul>
 </li>
 <li>
-    <a href="#"><i class="icon-copy"></i> <span>Gallery Management</span></a>
+    <a href="#"><i class="icon-copy"></i> <span>Blogs Management</span></a>
     <ul>
-        <li><%= link_to "Gallery Listing", admin_galleries_path %></li>
+        <li><%= link_to "Blog Listing", admin_galleries_path %></li>
         <li><%= link_to "Tags Management", admin_tags_path %></li>
     </ul>
 </li>
