--- a/app/views/admin/galleries/index.html.erb
+++ b/app/views/admin/galleries/index.html.erb
@@ -51,8 +51,8 @@
                 <div class="breadcrumb-line">
                     <ul class="breadcrumb">
                         <li><%= link_to "<i class='icon-home2 position-left'></i> Home".html_safe, {controller: "main", action: "index"} %></li>
-                        <li><%= link_to "Gallery Management", admin_galleries_path %></li>
-                        <li class="active">Gallery Listing</li>
+                        <li><%= link_to "Blogs Management", admin_galleries_path %></li>
+                        <li class="active">Blog Listing</li>
                     </ul>
                 </div>
             </div>
@@ -63,9 +63,9 @@
                 <!-- Basic datatable -->
                 <div class="panel panel-flat">
                     <div class="panel-heading">
-                        <%= link_to '<i class="glyphicon glyphicon-plus"></i>  New Gallery'.html_safe, new_admin_gallery_path, class: 'btn bg-teal' %>
+                        <%= link_to '<i class="glyphicon glyphicon-plus"></i>  New Blog'.html_safe, new_admin_gallery_path, class: 'btn bg-teal' %>
                         <hr/>
-                        <h5 class="panel-title">Galleries Management</h5>
+                        <h5 class="panel-title">Blogs Management</h5>
                     </div>
                     
                     <table class="table datatable-posts">
