--- a/app/views/about/index.html.erb
+++ b/app/views/about/index.html.erb
@@ -70,9 +70,7 @@
                     </div>
 
                     <div class="col-md-7 col-md-pull-4">
-                        <h4 class="lg text-uppercase">WE MAKE ALSO OTHER MEAL</h4>
-                        <p class="text-justify"><%= t(:about_content_1) %></p>
-                        <p class="text-justify"><%= t(:about_content_2) %></p>
+                        <h4 class="lg text-uppercase"><%= t(:about_content_3) %></h4>
                         <%= link_to t(:see_menu), {controller: "menu", action: "index"}, {class: "awe-btn awe-btn-2 awe-btn-default text-uppercase"} %>
                     </div>
                 </div>
