update setting via admin panel

--- a/app/views/admin/main/_main_menu.html.erb
+++ b/app/views/admin/main/_main_menu.html.erb
@@ -28,13 +28,12 @@
         <li><%= link_to "Restaurant Management", admin_restaurants_path %></a></li>
     </ul>
 </li>
-<!--<li>
-    <a href="#"><i class="icon-pencil3"></i> <span>News & Events</span></a>
+<li>
+    <a href="#"><i class="icon-gear"></i> <span>Setting</span></a>
     <ul>
-        <li><%= link_to "Posts Management", admin_posts_path %></li>
-        <li><%= link_to "Types Management", admin_types_path %></li>
+        <li class="<%= "active" if params[:action] == "smtp_gmail_auth" %>"><%= link_to "SMTP - Gmail", admin_smtp_gmail_auth_path %></li>
     </ul>
-</li>-->
+</li>
 <!--<li>
     <a href="#"><i class="icon-people"></i> <span>User</span></a>
     <ul>
