--- a/app/views/layouts/frontend.html.erb
+++ b/app/views/layouts/frontend.html.erb
@@ -27,6 +27,8 @@
     <!-- PAGE STYLE -->
     <%= stylesheet_link_tag '/frontend/css/style.css?v=1' %>
     <%= stylesheet_link_tag '/frontend/stylesheets/custom.css?v=1' %>
+    <%= stylesheet_link_tag '/frontend/css/jquery.bxslider.css' %>
+    
     <!--[if lt IE 9]>
         <%= javascript_include_tag 'http://html5shim.googlecode.com/svn/trunk/html5.js' %>
         <%= javascript_include_tag 'http://css3-mediaqueries-js.googlecode.com/svn/trunk/css3-mediaqueries.js' %>
