--- a/app/views/admin/main/_main_menu.html.erb
+++ b/app/views/admin/main/_main_menu.html.erb
@@ -23,7 +23,7 @@
     </ul>
 </li>
 <li>
-    <a href="#"><i class="icon-stack2"></i> <span>Info's Restaurant</span></a>
+    <a href="#"><i class="icon-stack2"></i> <span>Restaurant Info</span></a>
     <ul>
         <li><%= link_to "Restaurant Management", admin_restaurants_path %></a></li>
     </ul>
