--- a/app/views/admin/restaurants/index.html.erb
+++ b/app/views/admin/restaurants/index.html.erb
@@ -51,7 +51,7 @@
                 <div class="breadcrumb-line">
                     <ul class="breadcrumb">
                         <li><%= link_to "<i class='icon-home2 position-left'></i> Home".html_safe, {controller: "main", action: "index"} %></li>
-                        <li><%= link_to "Info's Restaurant", admin_restaurants_path %></li>
+                        <li><%= link_to "Restaurant Info", admin_restaurants_path %></li>
                         <li class="active">Restaurant Management</li>
                     </ul>
                 </div>
@@ -63,7 +63,7 @@
                 <!-- Basic datatable -->
                 <div class="panel panel-flat">
                     <div class="panel-heading">
-                        <h5 class="panel-title">Info's Management</h5>
+                        <h5 class="panel-title">Restaurant Info</h5>
                     </div>
                     
                     <table class="table datatable-restaurant">
