--- a/app/views/admin/restaurants/new.html.erb
+++ b/app/views/admin/restaurants/new.html.erb
@@ -51,7 +51,7 @@
                 <div class="breadcrumb-line">
                     <ul class="breadcrumb">
                         <li><%= link_to "<i class='icon-home2 position-left'></i> Home".html_safe, {controller: "main", action: "index"} %></li>
-                        <li><%= link_to "Info's Restaurant", admin_restaurants_path %></li>
+                        <li><%= link_to "Restaurant Info", admin_restaurants_path %></li>
                         <li><%= link_to "Restaurant Management", admin_restaurants_path %></li>
                         <li class="active">New Info</li>
                     </ul>
