--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -37,7 +37,7 @@
                                     <%= banner.title %><br/>
                                     <%= banner.description %><br/>
                                     Reservierung: 043 495 00 22<br/>
-                                    Order: phosaigon52@gmail.com<br/>
+                                    oder: phosaigon52@gmail.com<br/>
                                     ================================================================
                                     "/>
                                     </li>
