--- a/public/frontend/stylesheets/custom.css
+++ b/public/frontend/stylesheets/custom.css
@@ -131,12 +131,18 @@ ul.bxslider {
 }
 .bx-wrapper .bx-caption span {
     margin-bottom: 10px;
-    font-size: 1.1em !important;
-    color: #fff !important;
+    font-size: 1.5em !important;
+    color: #ffff00 !important;
     padding: 2px 10px !important;
+    font-family: "Times New Roman", Georgia, Serif !important;
 }
 .bx-wrapper .bx-caption {
     background: rgba(80, 80, 80, 0.4) !important;
+}
+@media screen and (max-width: 749px) {
+    .bx-wrapper .bx-caption span {
+        font-size: 1.1em !important;
+    }
 }
 @media screen and (max-width: 480px) {
     .bx-wrapper .bx-caption span {
