--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -35,9 +35,11 @@
                                     <li><img src="<%= banner.image_url.banner %>" title="
                                     ================================================================<br/>
                                     <%= banner.title %><br/>
-                                    <%= banner.description %><br/>
-                                    Reservierung: 043 495 00 22<br/>
-                                    oder: phosaigon52@gmail.com<br/>
+                                    <%= banner.description.html_safe %><br/>
+                                    Reservierung / Reservation: Phosaigon52 | Zürcherstrasse 91, 8952 Schlieren<br/>
+                                    Telefon: 043 495 00 22<br/>
+                                    E-Mail: phosaigon52@gmail.com</br>
+                                    Website: www.phosaigon52.ch<br/>
                                     ================================================================
                                     "/>
                                     </li>
