--- a/app/views/home/_header.html.erb
+++ b/app/views/home/_header.html.erb
@@ -14,7 +14,7 @@
         <nav class="navigation text-right" data-menu-type="1200">
             
             <!-- SOCIAL -->
-            <div class="head-social text-right">
+            <div class="head-social text-right icon-share">
                     <!-- Go to www.addthis.com/dashboard to customize your tools -->
                     <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-56e389a44d3cfa43"></script>
                     <!-- Go to www.addthis.com/dashboard to customize your tools -->
