--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -20,7 +20,7 @@
     <!-- HOME MEDIA -->
     <section id="home-media" class="home-media section">
         <div class="home-fixheight tb">
-            <ul class="home-slider" data-background="awe-static">
+            <ul class="home-slider fix-margin-bottom" data-background="awe-static">
                 <li>
                     <div class="image-wrap">
                         <img src="/frontend/images/temp/slideshow-01.jpg" alt="">
@@ -86,7 +86,7 @@
     <!-- END / HOME MEDIA -->
 
     <!-- FOOTER -->
-        <footer id="footer" class="footer">
+        <footer id="footer" class="footer home_footer">
             <div class="container">
                 <div class="copyright text-center">
                     <%= render "footer" %>
