--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -35,6 +35,7 @@
                                 <i class="icon awe_certificate"></i>
                             </div>
                             <p class="xmd"><%= @info.address %></p>
+                            <p class="xmd"><%=t :monday_to_friday %>: 10 -14h; 18h - 22h<br/><%=t :saturday %>: 17 - 22h<br/><%=t :sunday %>: Close</p>
                             <p class="xmd"><%= @info.email %></p>
                             <p class="xmd"><%= @info.phone %></p>
                         </div>
@@ -55,6 +56,7 @@
                                 <i class="icon awe_certificate"></i>
                             </div>
                             <p class="xmd"><%= @info.address %></p>
+                            <p class="xmd"><%=t :monday_to_friday %>: 10 -14h; 18h - 22h<br/><%=t :saturday %>: 17 - 22h<br/><%=t :sunday %>: Close</p>
                             <p class="xmd"><%= @info.email %></p>
                             <p class="xmd"><%= @info.phone %></p>
                         </div>
@@ -75,6 +77,7 @@
                                 <i class="icon awe_certificate"></i>
                             </div>
                             <p class="xmd"><%= @info.address %></p>
+                            <p class="xmd"><%=t :monday_to_friday %>: 10 -14h; 18h - 22h<br/><%=t :saturday %>: 17 - 22h<br/><%=t :sunday %>: Close</p>
                             <p class="xmd"><%= @info.email %></p>
                             <p class="xmd"><%= @info.phone %></p>
                         </div>
