--- a/app/views/admin/customer_contacts/show.html.erb
+++ b/app/views/admin/customer_contacts/show.html.erb
@@ -64,7 +64,7 @@
                 <!-- Basic datatable -->
                 <div class="panel panel-flat">
                     <div class="panel-heading">
-                        <h5 class="panel-title"><span class="text-semibold"><%= @customer_reservation.customer_name %></span></h5><br/>
+                        <h5 class="panel-title"><span class="text-semibold"><%= @customer_contact.customer_name %></span></h5><br/>
                         
                         <p class="color-red"><%= notice %></p><br/>
                         
