--- a/app/views/admin/restaurants/_form.html.erb
+++ b/app/views/admin/restaurants/_form.html.erb
@@ -60,6 +60,20 @@
               <%= f.text_field :website, placeholder: "Enter website of restaurant...", class: "form-control" %>
             </div>
         </div>
+            
+        <div class="form-group field">
+            <%= f.label "Hour Mon-Fri", class: "col-lg-2 control-label" %>
+            <div class="col-lg-10">
+              <%= f.text_field :hour_en, placeholder: "Enter website of restaurant...", class: "form-control" %>
+            </div>
+        </div>
+            
+        <div class="form-group field">
+            <%= f.label "Hour Sat", class: "col-lg-2 control-label" %>
+            <div class="col-lg-10">
+              <%= f.text_field :hour_de, placeholder: "Enter website of restaurant...", class: "form-control" %>
+            </div>
+        </div>
 
         <div class="form-group field">
             <%= f.label "Description", class: "col-lg-2 control-label" %>
