--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -34,6 +34,8 @@
                             <div class="awe-hr">
                                 <i class="icon awe_certificate"></i>
                             </div>
+                            <p class="xmd"><%=t :mon_fri %>: <%= @info.hour_en %></p>
+                            <p class="xmd"><%=t :sat %>: <%= @info.hour_de %>; <%=t :sun %>: <%=t :close %></p>
                             <p class="xmd"><%= @info.address %></p>
                             <p class="xmd"><%= @info.email %></p>
                             <p class="xmd"><%= @info.phone %></p>
@@ -54,6 +56,8 @@
                             <div class="awe-hr">
                                 <i class="icon awe_certificate"></i>
                             </div>
+                            <p class="xmd"><%=t :mon_fri %>: <%= @info.hour_en %></p>
+                            <p class="xmd"><%=t :sat %>: <%= @info.hour_de %>; <%=t :sun %>: <%=t :close %></p>
                             <p class="xmd"><%= @info.address %></p>
                             <p class="xmd"><%= @info.email %></p>
                             <p class="xmd"><%= @info.phone %></p>
@@ -74,6 +78,8 @@
                             <div class="awe-hr">
                                 <i class="icon awe_certificate"></i>
                             </div>
+                            <p class="xmd"><%=t :mon_fri %>: <%= @info.hour_en %></p>
+                            <p class="xmd"><%=t :sat %>: <%= @info.hour_de %>; <%=t :sun %>: <%=t :close %></p>
                             <p class="xmd"><%= @info.address %></p>
                             <p class="xmd"><%= @info.email %></p>
                             <p class="xmd"><%= @info.phone %></p>
