--- a/app/views/admin/main/_main_menu.html.erb
+++ b/app/views/admin/main/_main_menu.html.erb
@@ -8,9 +8,9 @@
     </ul>
 </li>
 <li>
-    <a href="#"><i class="icon-pencil3"></i> <span>Blogs Management</span></a>
+    <a href="#"><i class="icon-pencil3"></i> <span>Galleries Management</span></a>
     <ul>
-        <li class="<%= "active" if ["admin/galleries"].include?(params[:controller]) %>"><%= link_to "Blog Listing", admin_galleries_path %></li>
+        <li class="<%= "active" if ["admin/galleries"].include?(params[:controller]) %>"><%= link_to "Gallery Listing", admin_galleries_path %></li>
         <li class="<%= "active" if ["admin/tags"].include?(params[:controller]) %>"><%= link_to "Tags Management", admin_tags_path %></li>
     </ul>
 </li>
