--- a/app/views/admin/galleries/index.html.erb
+++ b/app/views/admin/galleries/index.html.erb
@@ -71,9 +71,9 @@
                     <table class="table datatable-posts">
                         <thead>
                             <tr>
+                                <th>Image</th>
                                 <th>Title</th>
                                 <th>Description</th>
-                                <th>Images</th>
                                 <th>Created At</th>
                                 <th class="text-center">Actions</th>
                             </tr>
