--- a/app/views/admin/galleries/_form.html.erb
+++ b/app/views/admin/galleries/_form.html.erb
@@ -34,7 +34,7 @@
     <div class="form-group field">
         <%= f.label "Description", class: "col-lg-2 control-label" %>
         <div class="col-lg-10">
-          <%= f.text_area :description, rows: "5", cols: "5", placeholder: "Enter description of gallery.....", class: "form-control" %>
+          <%= f.text_area :description, rows: "4", placeholder: "Enter description of gallery.....", cols: "4", id: "editor-full" %>
         </div>
     </div>
         
