--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -35,7 +35,7 @@
                                     <li><img src="<%= banner.image_url.banner %>" title="
                                     ================================================================<br/>
                                     <%= banner.title %><br/>
-                                    <%= banner.description.html_safe %><br/>
+                                    <%= banner.description.html_safe if !banner.description? %><br/>
                                     Reservierung / Reservation: Phosaigon52 | Zürcherstrasse 91, 8952 Schlieren<br/>
                                     Telefon: 043 495 00 22<br/>
                                     E-Mail: phosaigon52@gmail.com</br>
